<resources>


    <string name="app_name">home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="snack">Перекус</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="progress_home">Прогресс</string>
    <string name="meal_settings">Настройка приема пищи</string>
    <string name="meal_product_name">Продукт</string>
    <string name="meal_product_serving_size">Размер порции:</string>
    <string name="meal_product_ccal">Калории:</string>
    <string name="product_protein_text">"Б: "</string>
    <string name="product_carbohydrates_text">"У: "</string>
    <string name="product_fat_text">"Ж: "</string>
    <string name="searched_product_protein_text">"Белки: "</string>
    <string name="searched_product_carbohydrates_text">"Углеводы: "</string>
    <string name="searched_product_fat_text">"Жиры: "</string>
    <string name="default_product_portion">"Порция по умолчанию (гр): "</string>
    <string name="product_settings">Настройте параметры продукта (вес или ккал)</string>
    <string name="minor_product_information">Количество нутриентов в N гр. продукта:</string>
    <string name="product_calories_label">"Калории: "</string>
    <string name="product_serving_size_label">"Размер порции: "</string>
    <string name="product_protein_label">Белки (гр):</string>
    <string name="product_fat_label">Жиры (гр):</string>
    <string name="product_carbohydrates_label">Углеводы (гр):</string>
    <string name="product_dietary_fiber_label">Пищевые волокна (гр):</string>
    <string name="product_sugars_label">Сахара (гр):</string>
    <string name="product_starch_dextrins_label">Крахмал и декстрины (гр):</string>
    <string name="product_potassium_label">Калий (мкг):</string>
    <string name="product_calcium_label">Кальций (мг):</string>
    <string name="product_silicon_label">Кремний (мг):</string>
    <string name="product_magnesium_label">Магний (мг):</string>
    <string name="product_sodium_label">Натрий (мг):</string>
    <string name="product_sulfur_label">Сера (мг):</string>
    <string name="product_phosphorus_label">Фосфор (мг):</string>
    <string name="product_chlorine_label">Хлор (мг):</string>
    <string name="product_iron_label">Железо (мг):</string>
    <string name="product_zinc_label">Цинк (мг):</string>
    <string name="product_omega3_label">Омега3 (гр):</string>
    <string name="product_omega6_label">Омега6 (гр):</string>
    <string name="product_vitaminA_label">Витамин А (мкг):</string>
    <string name="product_vitaminB1_label">Витамин B1 (мг):</string>
    <string name="product_vitaminB2_label">Витамин B2 (мг):</string>
    <string name="product_vitaminB4_label">Витамин B4 (мг):</string>
    <string name="product_vitaminC_label">Витамин C (мг):</string>
    <string name="product_vitaminD_label">Витамин D (мкг):</string>
    <string name="items_in_meal">Продукты в приеме пищи:</string>
    <string name="only_vegan">Только веганские продукты</string>
    <string name="sortCaloriesType">Тип сортировки по калориям на 100гр:</string>
    <string name="ascending">По возрастанию</string>
    <string name="descending">По убыванию</string>
    <string name="offSort">Без сортировки</string>
    <string name="retry_get_product_information">Произошла ошибка при загрузке рецепта, повторите попытку</string>
    <string name="update_or_delete_item">Измените или удалите продукт из приема пищи</string>
</resources>